# Vierol_import

./: .gitignore  README.md  pyproject.toml  vierol_import.log.jsonl
.streamlit/: config.toml
config_catalog/: _meta_schema.yaml  fahrzeugdaten.yaml  topmotive.yaml
data/samples/: test.csv  warenkorb_beispiel.csv
src/vierol_import/: __init__.py  __main__.py  encoding_erkennung.py  engine.py  gui.py  main.py  typen.py
src/vierol_import/catalog/: __init__.py  meta_schema.py  reader.py
src/vierol_import/classification/: __init__.py  classifier.py
src/vierol_import/ingest/: __init__.py  watcher.py  zip_entpacker.py
src/vierol_import/loading/: __init__.py  loader.py  oracle_loader.py
src/vierol_import/mapping/: __init__.py  mapper.py
src/vierol_import/monitoring/: __init__.py  audit_log.py  logger.py
src/vierol_import/validation/: __init__.py  validator.py
tests/: conftest.py  test_catalog.py  test_classification.py  test_classifier.py  test_engine.py  test_ingest.py  test_loading.py  test_mapping.py  test_validation.py  test_zip_entpacker.py
